[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"


[project]
name = "my_utils"
version = "0.1.0"
authors = [
  { name = "Benjamin Fair", email = "bfair.kun@gmail.com" },
]
description = "u"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "pysam",
  "biopython",
]

[project.optional-dependencies]
spliceai = ["keras", "tensorflow", "spliceai"]

[project.urls]
Homepage = "https://github.com/bfairkun/my_utils"
"Bug Tracker" = "https://github.com/bfairkun/my_utils/issues"
Discussions = "https://github.com/bfairkun/my_utils/discussions"
Changelog = "https://github.com/bfairkun/my_utils/releases"

[project.scripts]
bed6-to-bed12 = "my_utils.bed_utils:bed6_to_bed12_cli"
bedtobed12 = "my_utils.bed_utils:bedtobed12_cli"
plot-block-signal = "my_utils.genometracks_utils:plot_block_signal_cli"

# Configure setuptools to find packages in src directory
[tool.setuptools]
packages = ["my_utils"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
my_utils = ["py.typed"]

[dependency-groups]
test = [
  "pytest >=9",
  "pytest-cov >=7",
]
dev = [
  { include-group = "test" },
]
docs = [
    "markdown>=3.9",
    "mdx-include>=1.4.2",
    "mkdocs-material>=9.1.19",
    "mkdocs>=1.1.2",
    "mkdocstrings-python>=1.18.2",
    "pyyaml>=6.0.1",
]


[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "--showlocals"]
strict = true
filterwarnings = [
  "error",
]
log_level = "INFO"
testpaths = [
  "tests",
]


[tool.coverage]
run.source = ["my_utils"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.10"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "my_utils.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true


[tool.ruff]

[tool.ruff.lint]
extend-select = [
  "ARG",    # flake8-unused-arguments
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "DTZ",    # flake8-datetimez
  "EM",     # flake8-errmsg
  "EXE",    # flake8-executable
  "FA",     # flake8-future-annotations
  "FLY",    # flynt
  "FURB",   # refurb
  "G",      # flake8-logging-format
  "I",      # isort
  "ICN",    # flake8-import-conventions
  "ISC",    # flake8-implicit-str-concat
  "LOG",    # flake8-logging
  "NPY",    # NumPy specific rules
  "PD",     # pandas-vet
  "PERF",   # perflint
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-use-pathlib
  "PYI",    # flake8-pyi
  "Q",      # flake8-quotes
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  "RUF",    # Ruff-specific
  "SIM",    # flake8-simplify
  "SLOT",   # flake8-slots
  "T10",    # flake8-debugger
  "T20",    # flake8-print
  "TC",     # flake8-type-checking
  "TRY",    # tryceratops
  "UP",     # pyupgrade
  "YTT",    # flake8-2020
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "SIM108",   # Use ternary operator (if-else is often more readable)
  "PLW2901",  # Loop variable overwritten (common pattern: line = line.strip())
  "TRY003",   # Avoid long messages outside exception class (too pedantic)
  "EM101",    # Exception string literal (too pedantic)
  "EM102",    # Exception f-string literal (too pedantic)
  "PT019",    # Fixture without value (false positives with used fixtures)
  "RET504",   # Unnecessary assignment before return (often improves readability)
  "PTH123",   # Use Path.open() instead of open() (too pedantic)
  "RUF005",   # Use iterable unpacking instead of concatenation (stylistic)
  "ICN001",   # matplotlib should be imported as mpl (not always desired)
  "PD011",    # Use .to_numpy() instead of .values (too pedantic)
]
# Uncomment if using a _compat.typing backport
# typing-modules = ["my_utils._compat.typing"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]
"docs/examples/**" = ["T20"]
"src/my_utils/bed_utils.py" = ["T20", "PLC0415"]        # CLI functions use print and lazy imports
"src/my_utils/genometracks_utils.py" = ["T20", "PLC0415"]  # CLI functions use print and lazy imports


[tool.pylint]
py-version = "3.10"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
]
